software engineering: about vcs and Git instllation

--- a/practice/engineering_in_hello_world.html
+++ b/practice/engineering_in_hello_world.html
@@ -318,17 +318,35 @@ make
 
 <p>これらのトラブルは「ソースコードの変更管理」と「共同作業」2つの問題に大別できます。それぞれの問題について個別の解決方法は確かに存在するでしょう。しかしソフトウェア開発という長い歴史の中でこれらの問題を一気に解決する技術が成熟してきました。それが「<b>バージョン管理システム</b>」（Version Control System）です。</p>
 
-<h3>バージョン管理システムとは</h3>
+<h3>バージョン管理システム（VCS）とは</h3>
 
-<p>「バージョン管理システム」について、Chaconらは「バージョン管理とは、一つのファイルやファイルの集合に対して時間とともに加えられていく変更を記録するシステムで、後で特定バージョンを呼び出すことができるようにするためのものです」（p.25）と説明しています。つまりバージョン管理システムを使うことでどのファイルがいつ・どのように・誰によって追加・変更・削除されたのかを常に追跡できるようになります。</p>
+<p>「バージョン管理システム（VCS）」について、Chaconらは「バージョン管理とは、一つのファイルやファイルの集合に対して時間とともに加えられていく変更を記録するシステムで、後で特定バージョンを呼び出すことができるようにするためのものです」（p.25）と説明しています。つまりバージョン管理システムを使うことでどのファイルがいつ・どのように・誰によって追加・変更・削除されたのかを常に追跡できるようになります。</p>
 
-<p>不特定多数のプログラマが同じコードツリーを編集するにあたり求められてきたバージョン管理システムには長い歴史があります。Fogelらが示すように<code>diff</code>と<code>patch</code>による電子メール経由での変更から始まり、Revision Control System（RCS）・Concurrent Versions System（CVS）・Apache Subversion（SVN）・Bitkeeper・MercurialおよびGitといったさまざまなバージョン管理システムが登場しました。これらツールがそれぞれ機能的・ライセンス的にどのように異なり使い勝手が違うのかといった調査は読者に任せますが、機能や使い勝手に対する利用者のニーズ・ツールそのもののデザインに対する考え方・利用規約・そのバージョン管理システムを利用できるWebプラットフォームなどさまざまな要素が時代によって変遷していき今に至ったことは確かです。</p>
+<p>不特定多数のプログラマが同じコードツリーを編集するにあたり求められてきたVCSには長い歴史があります。Fogelらが示すように<code>diff</code>と<code>patch</code>による電子メール経由での変更から始まり、Revision Control System（RCS）・Concurrent Versions System（CVS）・Apache Subversion（SVN）・Bitkeeper・MercurialおよびGitといったさまざまなVCSが登場しました。これらツールがそれぞれ機能的・ライセンス的にどのように異なり使い勝手が違うのかといった調査は読者に任せますが、機能や使い勝手に対する利用者のニーズ・ツールそのもののデザインに対する考え方・利用規約・そのVCSを利用できるWebプラットフォームなどさまざまな要素が時代によって変遷していき今に至ったことは確かです。</p>
 
-<p>現在では<a href="https://github.com">GitHub</a>や<a href="https://gitlab.com">GitLab</a>といったGitをベースとしたソースコード管理サービスが世界的に使われていることもあり、本稿ではバージョン管理システムとしてGitをHello Worldプロジェクトに導入することにします。ただし本稿はGitHubやGitLabといったWebサービスの利用方法については触れません。</p>
+<p>現在では<a href="https://github.com">GitHub</a>や<a href="https://gitlab.com">GitLab</a>といったGitをベースとしたソースコード管理サービスが世界的に使われていることもあり、本稿ではVCSとしてGitをHello Worldプロジェクトに導入することにします。ただし本稿はGitHubやGitLabといったWebサービスの利用方法については触れません。</p>
+
+<p>また本稿ではVCSで管理されたソースツリーのことを「リポジトリ」と呼ぶことにします。世間一般にも通じる呼び方でしょう。</p>
+
+<h3>集中型VCSと分散型VCS</h3>
+
+<p>VCSには大きく集中型のものと分散型の2つに分けられます。CVSやSVNといった集中型のVCSでは、ひとつの中央リポジトリにそれぞれの開発者がネットワーク経由で変更を加えていきます。開発者はリポジトリからソースコードなどのファイルをコピー（チェックアウト）し、それに変更を加えたあとにコミットすることで中央に変更が反映されます。ソースコードの変更履歴を知りたいときはその中央リポジトリをホスティングしているサーバまでネットワーク経由で問い合わせをしなければなりません。</p>
+
+<p>一方GitやMercurialといった分散型のVCSでは集中型のVCSと同じく主となるリポジトリは存在しますが、集中型と異なりそれぞれの開発者が完全な履歴を含めたリポジトリのコピーを手元のマシンにチェックアウトできます。集中型VCSにおけるコミットはネットワークを通した中央リポジトリへの変更反映でしたが、分散型VCSのコミットは開発者のマシンに存在するチェックアウトしてきたリポジトリ&mdash;&mdash;ローカルリポジトリ&mdash;&mdash;への変更反映です。</p>
+
+<p>分散型VCSでローカルリポジトリへコミットしたあと主のリポジトリへ同じコミットを反映させるには、そのリポジトリへ変更をプッシュするか、そのリポジトリを変更する権限があるユーザにお願いしてそのコミットをマージしてもらいます。集中型VCSと比べると煩雑に思えるかもしれません。ただ現代のソフトウェア開発の現場では、開発者がコミットし、権限を持つ別の開発者がそのコミット内容をレビューしマージするという分散型VCSを前提とした開発フローが一般的になっています。</p>
 
 <h3>Git</h3>
 
-<p>GitはGNU General Public License version 2.0でライセンスされたオープンソースのバージョン管理システムです。2005年12月に初版がリリースされて以来、GitHubなどWeb上の高機能なホスティングサービスも相まって現在に至るまで全世界のソフトウェア開発者に利用されています。</p>
+<p>さて、実際に分散型VCSのGitを使ってみましょう。GitはGNU General Public License version 2.0でライセンスされたオープンソースのVCSです。2005年12月に初版がリリースされて以来、GitHubなどWeb上の高機能なホスティングサービスも相まって現在に至るまで全世界のソフトウェア開発者に利用されています。</p>
+
+<p>RHEL9では<code>git</code>パッケージでGitが提供されています。インストールするにはターミナルで次のように実行します。</p>
+
+<pre><code><b class="root">dnf install git -y</b></code></pre>
+
+<p>いままで作業してきたソースツリー<code>engineering_in_hello_world</code>をGitリポジトリ化しましょう。このディレクトリまで移動して次のように実行してください。</p>
+
+<pre><code><b class="user">git init</b></code></pre>
 
 <h3>参考文献</h3>
 
