software engineering: Git commit example

--- a/practice/engineering_in_hello_world.html
+++ b/practice/engineering_in_hello_world.html
@@ -348,6 +348,51 @@ make
 
 <pre><code><b class="user">git init</b></code></pre>
 
+<p>次はリポジトリへコミットしていきます。Gitでは次の手順でコミットします。</p>
+
+<ol>
+  <li><code>git add</code>コマンドでファイルをステージングする。</li>
+  <li><code>git commit</code>コマンドでステージングされたファイルをコミットする。</li>
+</ol>
+
+<p>まずは<code>main.c</code>からコミットします。</p>
+
+<pre><code><b class="user">git add main.c</b>
+<b class="user">git commit</b></code></pre>
+
+<p>ここで<code>git commit</code>したとき、自動的にテキストエディタの画面が開かれます。ここでコミットメッセージを書き保存してエディタを閉じることでコミットが完了します。行頭が<code>#</code>から始まる行はコメントとして扱われ、実際のコミットメッセージには含まれません。コミットメッセージに関するルールや文化はプロジェクトごとに異なります。ここでは最低限の形式を提示します。</p>
+
+<pre><code>
+1  コミットの概要（1行）
+2  ＜空行＞
+3  コミット内容の詳細な説明が続く……
+4  …
+5  …
+</code></pre>
+
+<p>左端の数字はテキストの行番号を示しています。コミットメッセージの1行目にはそのコミットの概要を1行で書いてください。コミットメッセージは最低1行からなのでこの時点でもコミットは可能ですが、どのような経緯で変更に至ったかなどを書くためにだいたいは1行では済みません。</p>
+
+<p>1行目の概要以外にもコミットメッセージを記述する場合、2行目はなにも書かない空の行にし、3行目以降にコミット内容の詳細な説明を記述していってください。Hello Worldプロジェクトの<code>main.c</code>をコミットするときのコミットメッセージの例は以下のとおりです。</p>
+
+<pre><code>Hello Worldソースコードを作成した
+
+ソフトウェアエンジニアリングを体験するためにHello Worldのソースコードを
+Gitリポジトリにコミットした。
+</code></pre>
+
+<p>このようにコミットメッセージを書いて、内容を保存したあとにエディタを終了してください。エディタの画面からシェルのプロンプトに戻り<code>git commit</code>コマンドが完了します。コミットの履歴を確認するには<code>git log</code>コマンドを使います。さきほどのコミットが正常にリポジトリへ反映されているかどうかを確認しましょう。</p>
+
+<pre><code><b class="user">git log</b>
+commit e83915907a4ed415a0991c34e8df0b5f20112bd5 (HEAD -> master)
+Author: Yuuki Enomoto <uki@localhost.localdomain>
+Date:   Thu Sep 29 21:17:48 2022 +0900
+
+    Hello Worldソースコードを作成した
+
+    ソフトウェアエンジニアリングを体験するためにHello Worldのソースコードを
+    Gitリポジトリにコミットした。
+</code></pre>
+
 <h3>参考文献</h3>
 
 <ul>
