software engineering: About Git

--- a/practice/engineering_in_hello_world.html
+++ b/practice/engineering_in_hello_world.html
@@ -338,11 +338,15 @@ make
 
 <h3>Git</h3>
 
+<h4>Gitのインストール</h4>
+
 <p>さて、実際に分散型VCSのGitを使ってみましょう。GitはGNU General Public License version 2.0でライセンスされたオープンソースのVCSです。2005年12月に初版がリリースされて以来、GitHubなどWeb上の高機能なホスティングサービスも相まって現在に至るまで全世界のソフトウェア開発者に利用されています。</p>
 
 <p>RHEL9では<code>git</code>パッケージでGitが提供されています。インストールするにはターミナルで次のように実行します。</p>
 
 <pre><code><b class="root">dnf install git -y</b></code></pre>
+
+<h4>Gitリポジトリの初期化とリポジトリへのコミット</h4>
 
 <p>いままで作業してきたソースツリー<code>engineering_in_hello_world</code>をGitリポジトリ化しましょう。このディレクトリまで移動して次のように実行してください。</p>
 
@@ -392,6 +396,22 @@ Date:   Thu Sep 29 21:17:48 2022 +0900
     ソフトウェアエンジニアリングを体験するためにHello Worldのソースコードを
     Gitリポジトリにコミットした。
 </code></pre>
+
+<p>続いて<code>Makefile</code>や<code>README</code>も同じようにコミットしていきます。これらのファイルは役割が違いますし同時に作ったわけでもありません。別々のコミットに分けてしまいましょう。コミットメッセージをどう書くかはお任せします。</p>
+
+<pre><code><b class="user">git add Makefile</b>
+<b class="user">git commit</b>
+<b class="user">git add README</b>
+<b class="user">git commit</b></code></pre>
+
+<p>これですべてのファイルがGitリポジトリで管理されたことになります。ここで、ビルドして生成された<code>hello_world</code>バイナリはリポジトリの管理に含めていないことに注意してください。このバイナリを実行できる環境は限られています。仮にこのGitリポジトリがネットワーク上に公開されていて、別の人がRHEL9 x86_64以外の環境でチェックアウトしたとき、実行できない意味のないファイルまでチェックアウトされてしまうことになります。それに、その人が<code>make</code>であらためてビルドし直したとき、Gitはファイルに変更が入ったものとみなしてしまいます。したがってここではビルドで生成されるものをGitリポジトリに含めないほうが賢明です。</p>
+
+<p>最後にGitリポジトリのメタデータが格納されているディレクトリを確認しましょう。カレントディレクトリで<code>ls -a</code>を実行すると<code>.git</code>ディレクトリが存在しています。</p>
+
+<pre><code><b class="user">ls -a</b>
+.  ..  .git  Makefile  README  hello_world  main.c</code></pre>
+
+<p>このディレクトリやその中身のファイルは削除したり編集したりしないでください。<code>git</code>コマンドによって自動的に変更されていき、このディレクトリ以下のファイルが変更されてもステージングの対象になったり差分が表示されることはありません。</p>
 
 <h3>参考文献</h3>
 
