WIP: About software test

--- a/practice/engineering_in_hello_world.html
+++ b/practice/engineering_in_hello_world.html
@@ -23,7 +23,7 @@
   <li><a href="#env">Hello Worldの開発環境・実行環境</a></li>
   <li><a href="#documentation">Hello Worldのドキュメンテーション</a></li>
   <li><a href="#vcs">Hello Worldを管理する&mdash;&mdash;バージョン管理システム</a></li>
-  <li>Hello Worldをテストする</li>
+  <li><a href="#test">Hello Worldをテストする</a></li>
   <li>Hello Worldのコードレビュー</li>
   <li>Hello Worldをリリースする&mdash;&mdash;パッケージングとコンテナ化</li>
   <li>Hello Worldをサポートする</li>
@@ -418,6 +418,28 @@ Date:   Thu Sep 29 21:17:48 2022 +0900
 <ul>
   <li>『<b><a href="https://progit-ja.github.io/">Pro Git</a></b>』Scott Chacon、Ben Straub 著、高木正弘、Yusuke Sato、harupong 訳（Apress、2015年）</li>
   <li>『<b>CVS CVSによるオープンソース開発</b>』Karl Fogel、Moshe Bar 著、でびあんぐる 監訳、竹内里佳 訳（オーム社、2002年）</li>
+</ul>
+
+<h2 id="test">Hello Worldをテストする</h2>
+
+<p>これまでソースコードを書いたほかにコンパイルの自動化とこのプロジェクトについての説明となるREADMEを書いてきました。リモートリポジトリの設定はしていませんがソースツリーをGitリポジトリ化することで他者との共同作業もできるようになりました。</p>
+
+<p>Hello Worldそのもののソースコードから少し離れたことをしてきましたが、ここではソースコードに焦点を戻すことにします。「Hello Worldが正常に動いているか」をどう保証するのかについて考えます。つまりHello Worldをテストするのです。</p>
+
+<h3>ソフトウェアテスト</h3>
+
+<p>なぜソフトウェアをテストをしなければならないのでしょうか。書いたコードを動かしてエンジニアの期待どおりに動くならそれでいいのではないでしょうか。</p>
+
+<p>たしかに自分だけで、自己責任で使う範囲なら自身で意図したとおりにしかソフトウェアを動かさないでしょうし、バグがあったとしてもある程度許容はできるでしょう。しかしそのソフトウェアで利益を出そうとするケースを考えてみてください。せっかくお金を出して買ったソフトウェアが思い通りに動かなかったり、変なエラーを出して突然終了したり、出力される計算結果が間違っていたりしたらユーザはどう思うでしょうか？そのユーザはもう一度その会社からソフトウェアを買ったり、あるいはサブスクリプション契約を延長したいとは思わないでしょう。返金すら検討したくなるかもしれません</p>
+
+<p>つまりソフトウェアの品質というのは、そのソフトウェアがもたらすユーザ体験や見かけだけではなく、バグやユーザが被る問題の少なさといった面も含まれるのです。品質を保証するためには体系的なソフトウェアテストが欠かせないということです。</p>
+
+<p>では実際にソフトウェアテストとはどうおこなえばいいのでしょうか。古典『ソフトウェア・テストの技法』においてGlenford J. Myersはプログラムに対するテストを「<b>テストとは、エラーをみつけるつもりでプログラムを実行する仮定である</b>」（p.6）と定義しています。Myersは「プログラムにエラーがないことを証明する」（p.6）のがテストと決めてしまうと「プログラムをできるだけ失敗にみちびかないようなテスト・データを選択しようとするだろう」（p.6）と人間の心理的な側面を指摘し、エラーがないことを確認するテストよりもエラーを見つけることを目標としたテストのほうが結果としてエラーが見つかりやすくなりテストとしての価値が高いと論じています。つまり自分で作ったソフトウェアを壊すつもりでテストの手順を考えればいいのです。</p>
+
+<h3>参考文献</h3>
+
+<ul>
+  <li>『<b>ソフトウェア・テストの技法 第2版</b>』Glenford J. Myers 著、長尾 真 監訳、松尾 正信 訳（近代科学社、2018年、第7刷）</li>
 </ul>
 
 <hr>
