--- a/practice/engineering_in_hello_world.html
+++ b/practice/engineering_in_hello_world.html
@@ -220,7 +220,7 @@ make: 'all' に対して行うべき事はありません.
 
 <h3>ドキュメントの意義</h3>
 
-<p>ここまででHello Worldプログラムを作り、そのビルドをMakefileで自動化することができました。次にやるべきことは、これまでに用意したファイル等について説明する<b>ドキュメント</b>を作るというものです。</p>
+<p>ここまででHello Worldプログラムを作り、そのビルドをMakefileで自動化できました。次にやるべきことは、これまでに用意したファイル等について説明する<b>ドキュメント</b>を作るというものです。</p>
 
 <p>なぜドキュメントを作らなければならないのでしょうか？ドキュメントは自分以外の誰かに対してビルドやソフトウェアを利用するための方法を説明したり、プロジェクトの意義や目的などを文章として残したりするために必要です。そして一般にソフトウェア開発は開発者一人だけでおこなわれずに、複数人がチームとして共同で作業することで達成されます。またソフトウェア開発プロジェクトが大規模になり時間がかかればかかるほど、戦力として新しくメンバーが参加する可能性もあります。</p>
 
@@ -228,7 +228,7 @@ make: 'all' に対して行うべき事はありません.
 
 <p>一方でドキュメンテーションはプログラミング等の作業と比べて優先順位が下がりがちな傾向にあります。アジャイルソフトウェア開発宣言（<a href="https://agilemanifesto.org/iso/ja/manifesto.html">https://agilemanifesto.org/iso/ja/manifesto.html</a>）では「包括的なドキュメントよりも動くソフトウェアを」という言葉もあります（これはドキュメントに価値がないという意味ではありません）。また Andrew HuntとDavid Thomasは『達人プログラマー』において「ほとんどの開発者はドキュメントのことについてあまり考えていません」（p.276）と断言しています。</p>
 
-<p>ではドキュメンテーションは後回しにされて然るべきものなのでしょうか？違います。そのような実状を踏まえたうえでAndrewらは「我々はコードとドキュメントを分けるという考え方から離れ、それらを同じモデルの2つのビューとして扱うべきなのです。……（略）……すべてのドキュメントはコードを反映したものになっているはずです」（p.276）と述べ、もしドキュメントとソースコードとの間でなにかしらの矛盾があった場合は「どんな場合であれ、それはコードの問題へとつながっていくのです」と論じています。つまりドキュメンテーションはソースコードの問題を燻り出す可能性も秘めているのです。</p>
+<p>ではドキュメンテーションは後回しにされて然るべきものなのでしょうか？違います。そのような実状を踏まえたうえでAndrewらは「我々はコードとドキュメントを分けるという考え方から離れ、それらを同じモデルの2つのビューとして扱うべきなのです。……（略）……すべてのドキュメントはコードを反映したものになっているはずです」（p.276）と述べ、もしドキュメントとソースコードとの間でなにかしらの矛盾があった場合は「どんな場合であれ、それはコードの問題へとつながっていくのです」と論じています。つまりドキュメンテーションはソースコードの問題を燻りだす可能性も秘めているのです。</p>
 
 <h3>なにを書き残すべきか</h3>
 
