WIP: testing hello_world

--- a/practice/engineering_in_hello_world.html
+++ b/practice/engineering_in_hello_world.html
@@ -436,6 +436,52 @@ Date:   Thu Sep 29 21:17:48 2022 +0900
 
 <p>では実際にソフトウェアテストとはどうおこなえばいいのでしょうか。古典『ソフトウェア・テストの技法』においてGlenford J. Myersはプログラムに対するテストを「<b>テストとは、エラーをみつけるつもりでプログラムを実行する仮定である</b>」（p.6）と定義しています。Myersは「プログラムにエラーがないことを証明する」（p.6）のがテストと決めてしまうと「プログラムをできるだけ失敗にみちびかないようなテスト・データを選択しようとするだろう」（p.6）と人間の心理的な側面を指摘し、エラーがないことを確認するテストよりもエラーを見つけることを目標としたテストのほうが結果としてエラーが見つかりやすくなりテストとしての価値が高いと論じています。つまり自分で作ったソフトウェアを壊すつもりでテストの手順を考えればいいのです。</p>
 
+<h3>Hello Worldのテスト</h3>
+
+<p>さて実際にHello Worldのテストを考えてみましょう。ほとんど最小クラスのソフトウェアだけあってどうやってエラーを見つけられるようなテストをすればいいのか逆に考えるのが大変です。ひとまずこのプログラムは「Hello World」という文字列を出せばいいのですから最低限それだけは目視でなくとも確認できるようにしましょう。なおこのように正常な動作を確認するためのテストケースのことを「ハッピーパス」と呼びます。</p>
+
+<p>単に出力される文字列をテストするにはシェルでパイプ（<code>|</code>）と<code>grep</code>を組み合わせれば簡単に実現できます。</p>
+
+<pre><code><b class="user">./hello_world | grep "^Hello World$"</b>
+Hello World</code></pre>
+
+<p><code>grep</code>は与えられた正規表現をもとに文字列をフィルタできるコマンドです。正規表現<code>^Hello World$</code>は「Hello World」のみの行をフィルタするという意味です。</p>
+
+<p>このコマンド結果では「Hello World」がそのまま出力されました。つまり<code>grep</code>に与えた正規表現と、<code>hello_world</code>コマンドで出力された文字列が一致していることを意味します。</p>
+
+<p>ソフトウェアテストではテスト用の一連のコマンドをなにかひとつの包括的なコマンドにまとめることでテストの実行が容易になります。ここでは<code>Makefile</code>にテスト用のターゲットを追加して、<code>make test</code>を実行するとテストが動くようにします。単純に書くならこのような変更になります。以下は<code>git diff</code>の結果です。</p>
+
+<p><code>Makefile</code>では<code>$</code>記号が特別な意味をもつのでそれをエスケープするため代わりに<code>$$</code>と書いています。またコマンドの行頭に<code>@</code>をつけることで実行されるコマンドそのものが出力されなくなります。</p>
+
+<pre><code>diff --git a/Makefile b/Makefile
+index b30ff53..68985eb 100644
+--- a/Makefile
++++ b/Makefile
+@@ -1,12 +1,15 @@
+ NAME=          hello_world
+ PROGRAM=       main.c
+
+-all: build
++all: build test
+
+ build: ${NAME}
+
+ ${NAME}: ${PROGRAM}
+        gcc ${PROGRAM} -o $@
+
++test:
++       @./${NAME} | grep "^Hello World$$"
++
+ clean:
+        rm -f ./${NAME}</code></pre>
+
+<p>これでハッピーパスのテストが自動化されました。</p>
+
+<pre><code><b class="user">make test</b>
+Hello World</code></pre>
+
+<p>ただしこれではテストが通っているのか単に<code>hello_world</code>を動かしただけなのか判別し難いです。</p>
+
 <h3>参考文献</h3>
 
 <ul>
