practice: presentation antipattern

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ th,td.article{border:0;text-align:left;padding:0 0 0 1em;}
 <h3 id="practice">プラクティス</h3>
 <table class="article">
   <tbody>
+    <tr><td class="date">2023/02/24</td><td class="article"><a href="./practice/presentation_antipattern.html">プレゼンテーションのアンチパターン</a></td></tr>
     <tr><td class="date">2021/11/29</td><td class="article"><a href="./practice/html.html">私家版HTML文書執筆ガイド</a></td></tr>
     <tr><td class="date">2019/12/17</td><td class="article"><a href="./practice/shellscript.html">私家版ShellScript Coding Style</a></td></tr>
     <tr><td class="date">2020/10/10</td><td class="article"><a href="./practice/remotework.html">リモートワークのプラクティス</a></td></tr>
