--- a/practice/presentation_antipattern.html
+++ b/practice/presentation_antipattern.html
@@ -27,7 +27,7 @@
 
 <p>当たり前ですが資料だけ用意して喋る練習をしないのは論外です。本番では練習の場よりも多くの人が集まるわけで、その緊張感からいつもどおりの喋りや振る舞いができなくなります。プレッシャーに耐えるには練習量に裏打ちされた自信とそれによる（または持ち前の）度胸に頼るしかありません。練習していない人、あるいは資料の準備すらままならなかった人はその発表の下手さやじこちなさから、聴き手に至らなさを看破されています。</p>
 
-<a id="env">本番と違う環境で練習する</a>
+<h2 id="env">本番と違う環境で練習する</h2>
 
 <p>本番はどのように発表しますか？自分のノートパソコンにプロジェクターをつなげますか？あらかじめ誰かに発表資料を提出しますか？ビデオ通話で画面を共有しながら喋りますか？ビデオ通話のツールはなんですか？</p>
 
@@ -54,13 +54,13 @@
 <p>練習しても人によっては完全に訥弁をなくすことはできないかもしれません。それでも練習によって減らすことはできます。訥弁を意識的に喋っている人はいないでしょう。ほとんどが無意識に発音しているだけです。克服のためのコツを以下にまとめました。</p>
 
 <dl>
-<dt>他人に指摘してもらう・自分の発表を録音して聴いてみる</dt>
+<dt><b>他人に指摘してもらう・自分の発表を録音して聴いてみる</b></dt>
 <dd>訥弁を減らすことを目的とした練習をしましょう。訥弁が挟まっているかどうかを第三者に指摘してもらいましょう。ひとりで練習する場合は発表を録音しておき、それを聴いてみましょう。</dd>
 
-<dt>喋る内容を事前に用意する</dt>
+<dt><b>喋る内容を事前に用意する</b></dt>
 <dd>原稿を用意して発表のときはそれを一言一句なぞって喋るようにしてみましょう。当然、原稿は口語体で書きます。原稿どおりに喋れば訥弁が挟まる余地はないですし、練習すればするほど喋る内容のニュアンスを掴むことができ、原稿を見なくてもすらすらとアレンジを効かせながら喋ることができるようになります。</dd>
 
-<dt>「間」を恐れない</dt>
+<dt><b>「間」を恐れない</b></dt>
 <dd>「えー」を挟んでしまう理由のひとつに、発表途中でなにも喋っていない静かな時間を恐れ、なにか声で埋めないといけないという意識を持っているというケースがあります。この場合「間」は避けるべきものではないと考え方を変えましょう。発表のあいだすべての時間が声で埋め尽くされている必要はありません。「間」を恐れず、むしろ楽しみましょう。</dd>
 </dl>
 
