--- a/essay/closed_rhel.html
+++ b/essay/closed_rhel.html
@@ -56,7 +56,7 @@
 
 <p>もしできていたなら、それは少なくともRed Hatにとって価値あるものとは捉えられなかったか、Red Hatのエンジニアによる仕事に比べれば量が少なく誤差と思われていたということです。仮に「ホビイスト」や「ハッカー」らによる貢献の質が高ければ、彼らへ自由に使わせないことによるデメリットのほうが大きいと判断されるはずです。一方でもし還元できていなかったのであれば、それはもうなるべくしてなったということです。あきらめましょう。</p>
 
-<p>ここでいくつか教訓を得られるかと思います。</p>
+<p>ここでいくつかの教訓を見つけました。</p>
 
 <ol>
   <li>なるべくFLOSSのアップストリームへバグ報告やパッチ投稿をするようにしましょう。</li>
@@ -64,7 +64,11 @@
   <li>FLOSSのためにできることを検討してみましょう。</li>
 </ol>
 
-<p>これらを実践したところで、営利企業が公開しているFLOSSはRed Hatと同じように契約でクローズドになっていく場合もあるかもしれません。しかしなにも行動を起こさないよりかは、企業に強いユーザの下支えを感じさせてあげるほうが今回のような事態に発展する確率は低そうに見えますし、わずかなあいだでもそのプロダクトが良くなることを思えば苦ではないはずです。</p>
+<p>これらを実践したところで、営利企業が公開しているFLOSSはRed Hatと同じように契約の都合で実質クローズドになっていく場合もあるかもしれません。しかしなにも行動を起こさないよりかは、企業に強いユーザの下支えを感じさせてあげるほうが今回のような事態に発展する確率は低そうに見えますし、わずかなあいだでもそのプロダクトが良くなることを思えば苦ではないはずです。</p>
+
+<p>一方でこんな強気の表明をしてしまった以上、今後はRed HatにFLOSS開発者&mdash;&mdash;特にRed HatによってパッケージングされているFLOSSの開発者&mdash;&mdash;から厳しい目が注がれることでしょう。「会社としてあんなことを書いたのに、私のプロダクトにはなにも還元してくれないじゃないか」と。Red HatはFLOSSのトップランナー的存在ではありますから杞憂のような気はしますが、プレッシャーが高くなっていることは確かだと思います。</p>
+
+<p>当然これはRed Hatに限った話ではありませんから、FLOSSを利用している企業やFLOSSをforkするかたちで製品として利用している企業もじゅうぶん留意すべき点ではあります。個人的な意見としてですが、この件をきっかけに企業によるFLOSSへの貢献は一層注目されると考えています。備えましょう。</p>
 
 <hr>
 <footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
