--- a/essay/floss_reading.html
+++ b/essay/floss_reading.html
@@ -63,4 +63,4 @@
 <p>文化継承のためにできることのひとつに、あなたが持っている過剰な権利を緩めるというものがあります。物書きをしたときどのような権利が与えられるのか、その権利にはどのような負の側面があるのか、それを解決するにはどう行動すればいいのかをFLOSS文化の文脈で考え直してみてはどうでしょうか。</p>
 
 <hr>
-<footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
+<footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="../cc0.svg" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
