--- a/essay/free_flaws.html
+++ b/essay/free_flaws.html
@@ -82,4 +82,4 @@ This malicious feature is known as Digital Restrictions Management (DRM) (see ou
 
 <p>この決定によってHyperbolaBSDが大成功を収め、BSDユーザの増加に寄与し、BSDコミュニティが世界的ににぎやかになるならそれに越したことはありません。しかし現時点では実装よりもフリーソフトウェア主義が先行して物事が決められてしまい、結果として既存のHyperbolaユーザを思想のふるいにかけているだけなのではないかと感じます。</p>
 <hr>
-<footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
+<footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="../cc0.svg" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
