--- a/essay/recent_state_2022feb.html
+++ b/essay/recent_state_2022feb.html
@@ -51,4 +51,4 @@
 <p>あとは自重トレーニングを続けています。記録をとり始めたのは2020年5月からなのでそろそろ2周年が近いです。ビッグ6を毎日1種目以上やって土日は休みというルーチンでやっています。24時間のうち頑張る時間はとても短く無理なく続けられています。</p>
 
 <hr>
-<footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
+<footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="../cc0.svg" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
