--- a/essay/remote_work.html
+++ b/essay/remote_work.html
@@ -72,4 +72,4 @@
 
 <p>この「在宅勤務ができる自由がある」点がおそらく一番重要だと思います。オフィスワークかリモートワークどちらか一方だけを選ぶ必要はないのです。家で働きたければ家で働いて、オフィスに行きたければ好きな時間に行けばいいのです。ただ、オフィス以外の場所で働くときに生じるギャップを社員全員が把握しておかなければいけないでしょう。</p>
 <hr>
-<footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></div></body></html>
+<footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="../cc0.svg" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></div></body></html>
