--- a/netbsd/npf.html
+++ b/netbsd/npf.html
@@ -107,7 +107,7 @@ ssh             stream  tcp6    *               *       3       24h</b></code></
 <p><code>blacklistd(8)</code>の状態は<code>blacklistctl dump -a</code>を実行すると確認できます。その他のオプションについてはオンラインマニュアル<code>blacklistctl(8)</code>を参照してください。</p>
 <hr>
 <footer>
-<div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
+<div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="../cc0.svg" alt="CC0" /></a></div>
 <p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p>
 </footer>
 </div></body>
