--- a/essay/cc0code.html
+++ b/essay/cc0code.html
@@ -41,7 +41,7 @@ This work is published from:
 <p>結論、次のようなコードになりました。</p>
 
 <pre><code>&lt;div style="text-align:center;padding-top:2em;padding-bottom:2em;"&gt;
-  &lt;a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"&gt;&lt;img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /&gt;&lt;/a&gt;
+  &lt;a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"&gt;&lt;img src="../cc0.svg" alt="CC0" /&gt;&lt;/a&gt;
 &lt;/div&gt;
 &lt;p&gt;
 To the extent possible under law, &lt;a href="mailto:uki@e-yuuki.org"&gt;Yuuki Enomoto&lt;/a&gt; has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.
@@ -52,7 +52,7 @@ To the extent possible under law, &lt;a href="mailto:uki@e-yuuki.org"&gt;Yuuki E
 <p>このコードは本Webページで使われています。</p>
 <hr>
 <footer>
-<div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
+<div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="../cc0.svg" alt="CC0" /></a></div>
 <p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p>
 </footer>
 </div></body>
