--- a/essay/pkgsrc-fun.html
+++ b/essay/pkgsrc-fun.html
@@ -24,4 +24,4 @@
 
 <p>こういうたのしさを感じたところで調子づいて一歩進んで本命のプロジェクトを進めたくなる気持ちになる。「世界に対してなにかしてやった感覚」はやる気を引き出してくれるのかもしれない。FLOSS活動の普及についていえば、なんらかのプロジェクトのcommitterになるには仕事で関わっているソフトウェアのメンテナを目指してみるのが技術的な障壁は低くていいのかもなと思う。探してみるとインターネットはメンテンスすべきコードがたくさんあるしバザールは賑わうに越したことはないのだから、挑戦してみても誰も文句は言わないだろう。</p>
 <hr>
-<footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
+<footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="../cc0.svg" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
