--- a/essay/practice_tdd.html
+++ b/essay/practice_tdd.html
@@ -45,7 +45,7 @@
 <p>振り返れば、新しい開発手法を試せて良い経験になりました。これをできれば職場でもやりたいですし、職場でしかできなさそうなペアプログラミングやモブプログラミングなどの手法も試していきたいです。</p>
 <hr>
 <footer>
-<div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
+<div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="../cc0.svg" alt="CC0" /></a></div>
 <p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p>
 </footer>
 </div></body>
