--- a/freebsd/office.html
+++ b/freebsd/office.html
@@ -86,4 +86,4 @@ Recording source: mic</code></pre>
 <p>まだ一社しか経験しておらず、何十年も会社づとめしているわけではないのでまだ踏んでいない罠があるかもしれません。むしろ、いまは上述したことさえ気をつけていれば快適に事務作業ができるという意味でもあります。特にGSuiteは（提供元のふるまいはともかく）どんな環境でもブラウザさえあればだいたい動きます。デスクトップOSが統一されていないような組織で特に優れているサービスです。</p>
 
 <hr>
-<footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
+<footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="../cc0.svg" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
