--- a/netbsd/update_pkgsrc.html
+++ b/netbsd/update_pkgsrc.html
@@ -112,7 +112,7 @@ AUTO_PACKAGES="$(grep -v '^#' '/var/pkg_comp/list.txt')"</code></pre>
 <p><code>pkg_comp(8)</code>を使ったパッケージの更新を紹介しました。<code>pkgsrc(7)</code>の最新リリースから少し時間が経ってから新しいバイナリパッケージがFTPサーバにアップロードされるので、リリースからすぐパッケージを更新したければ手元のマシンでビルドするのがもっとも速いでしょう。任意のビルドオプションを付けてビルドを実行できるのも利点のひとつです。</p>
 <hr>
 <footer>
-<div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
+<div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="../cc0.svg" alt="CC0" /></a></div>
 <p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p>
 </footer>
 </div></body>
