--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ th,td.article{border:0;text-align:left;padding:0 0 0 1em;}
 <h3 id="freebsd">FreeBSD</h3>
 <table class="article">
   <tbody>
+    <tr><td class="date">2024/09/07</td><td class="article"><a href="./freebsd/fix_bootloader.html">FreeBSD 14.0へアップグレードしたあとにブートローダを直す</a></td></tr>
     <tr><td class="date">2021/10/16</td><td class="article"><a href="./freebsd/goss.html">gossを使ってFreeBSDサーバの設定をテストする</a></td></tr>
     <tr><td class="date">2021/02/22</td><td class="article"><a href="./freebsd/pfrouting.html">pfを使い外部からのアクセスを内部ネットワークへ転送する</a></td></tr>
     <tr><td class="date">2020/02/27</td><td class="article"><a href="./freebsd/office.html">執務環境としてのFreeBSD</a></td></tr>
